<resources>
    <string name="app_name">AutoScrocc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_rent">On Rent</string>
    <string name="menu_purchase">On Sale</string>
    <string name="menu_about">About</string>
    <string name="menu_send">Send</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="my_profile_button_text">My Profile</string>
    <string name="menu_bot">Scrounge your car</string>
    <string name="menu_login">Login</string>

    <string name="title_activity_splash">AutoScrocc SplashActivity</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="esterEgg">John is happy with is coffee</string>
    <string name="menu_register">Register</string>
    <string name="password_confirm_text">Confirm password</string>
    <string name="logut_button_text">Logout</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="role_text">Role</string>
    <string name="client">Client</string>
    <string name="company">Company</string>
    <string name="info_menu">Info</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="update_success_message">Data updated successfully</string>
    <string name="server_unreachable_message">Server unreachable, try again later</string>
    <string name="your_scrounge_menu">Your scrounge</string>
    <string name="your_purchases">Your purchases</string>
    <string name="your_rents">Your rents</string>
    <string name="general_parameters">General Parameters</string>
    <string name="adv_parameters">Advanced Parameters</string>
    <string name="year_car">Year</string>
    <string name="price_car">Price</string>
    <string name="hp_car">HP</string>
    <string name="type_car">Car Type</string>
    <string name="explorer_menu">Explorer</string>
    <string name="doors_numbers">Doors</string>
    <string name="cylinder_type">Engine</string>
    <string name="cylinder_number">Cylinder N.</string>
    <string name="fiuel_type">Fiuel</string>
    <string name="action_filter">Filter</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="country">Country</string>
    <string name="street">Street</string>
    <string name="email">E-mail</string>
    <string name="image_choose">Image choose</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="tel">Telephone</string>
    <string name="registration_success">Registration success, now you can login your account</string>
    <string name="registration_not_success">Check input data and try again later</string>
    <string name="search_button">Search Rent</string>
    <string name="reset_button">Reset</string>
    <string name="close_button">Close</string>
    <string name="scrouge_this_car">Scrouge this car</string>
    <string name="shwDet">Show details</string>
    <string name="carLicPlate">Licence plate</string>
    <string name="carName">Name</string>
    <string name="confirmMessage">Wolud you confirm your order?</string>
    <string name="sYes">Yes</string>
    <string name="sNo">No</string>
    <string name="brand_string">Chocie a car brand</string>
    <string name="car_model">Choice a car model</string>
    <string name="car_engine">Choice a car engine</string>
    <string name="rent_price">Set a car price:</string>

    <string name="km_car_rent">Set a car KM</string>
    <string name="km_placeholder">KM</string>
    <string name="add_rent_button">Add</string>
    <string name="offer_type">Offer</string>
    <string name="sale_text">sale</string>
    <string name="rent_txt">Rent</string>
    <string name="year_immatriculation_rent">year of registration</string>
    <string name="licensePlate_text">LicensePlate</string>
    <string name="you_must_be_register">You must be register to buy this offer</string>
    <string name="best_rent">Our best rent</string>
    <string name="best_sale">Our best sale</string>
    <string name="menu_offer">Offer</string>
</resources>
